--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ body {
 }
 
 .contact-page ul li {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -243,15 +244,31 @@ body {
   display: block;
   text-align: center;
   font-size: 1em;
+  position: absolute;
   border-radius: 10px;
   width: 100%;
   height: 100%;
   background-color: #2cf31200;
-  color: rgba(255, 0, 0, 0);
   text-decoration: none;
 }
-
-
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/******************##********************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
 
 @media screen and (max-width: 576px) {
   * {
