--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .navbar {
   width: 100%;
   height: 15%;
-  background-color:#eaad7b;
+  background-color: #eaad7b;
   box-shadow: 5px 5px 1px -1px rgb(0, 0, 0);
   border: 1px solid black;
   border-radius: 10px;
@@ -199,7 +199,6 @@ body {
   width: 75%;
   height: auto;
   display: none;
-  width: auto;
   padding: 10px;
   background-color: #d86fd7;
 }
@@ -270,15 +269,102 @@ body {
 /****************************************/
 /****************************************/
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 770px) {
   .container {
     width: 96vw;
-    height: 99vh;
-    box-sizing: border-box;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  }
+
+  /************************************************/
+  /*********************HEAD **********************/
+  /************************************************/
+
+  .wrapper-navbar {
+    width: 100%;
+  }
+
+  .wrapper-navbar li {
+    margin: 15px;
+  }
+
+  /************************************************/
+  /****************BODY****************************/
+  /************************************************/
+
+  /* ***************HOME PAGE**********************/
+
+  .home-page {
+    box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
+    position: absolute;
+    width: 80%;
+  }
+
+  .home-page > div {
+    margin-right: -6px;
+  }
+
+  /************************ABOUT PAGE**********************/
+
+  .about-page {
+    box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
+    position: absolute;
+    padding: 30px;
+    overflow: auto;
+  }
+
+  /*******************SKILL PAGE***************************/
+
+  .skill-page {
+    box-sizing: border-box;
+    width: 90%;
+  }
+
+  .skill-page ul li {
+    margin: 10px;
+  }
+  /* ******************PROJECT PAGE************************** */
+
+  .project-page {
+    padding: 30px;
+  }
+  .project-page ul li {
+    font-size: x-large;
+  }
+
+  /* ******************CONTACT PAGE************************** */
+
+  .contact-page {
+    box-sizing: border-box;
+    width: 90%;
+  }
+
+  .contact-page ul li {
+    margin: 10px;
+    position: relative;
+    height: auto;
+  }
+}
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/******************##********************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+/****************************************/
+@media screen and (max-width: 579px) {
+  .container {
+    width: 96.5vw;
   }
 
   /************************************************/
@@ -286,154 +372,61 @@ body {
   /************************************************/
 
   .wrapper-navbar {
-    box-sizing: border-box;
     width: 100%;
-    height: 100%;
-    display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
+    padding-right: 1px;
   }
 
   .wrapper-navbar li {
-    display: block;
-    align-items: center;
-    padding: 8px 3px 8px 3px;
-    margin: 1px;
-    box-shadow: 4px 4px 1px -1px rgb(0, 0, 0);
-    border-radius: 10px;
-    font-size: small;
-    font-weight: bold;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
+    padding: 8px 1% 8px 1%;
+    margin: 1%;
+    box-shadow: 5px 5px 1px -1px rgb(0, 0, 0);
+  }
 
   /************************************************/
   /****************BODY******************/
   /************************************************/
 
-  .wrapper-content {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 85%;
-  }
-
   /* ***************HOME PAGE**************** */
 
   .home-page {
     box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
-    display: flex;
     position: absolute;
-    justify-content: space-evenly;
-    align-items: center;
     width: 80%;
   }
 
   .home-page > div {
     margin: 6%;
-    line-height: 30px;
   }
-
-  .home-page h6 a {
-    color: #052357;
-    cursor: pointer;
-  }
-
   .home-page img {
     display: none;
   }
 
-  /* ***********************ABOUT PAGE********************* */
+  /************************ABOUT PAGE*********************/
 
   .about-page {
     box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
     border-radius: 10px;
-    color: black;
-    display: none;
-    width: 75%;
-    height: auto;
     position: absolute;
     padding: 30px;
-    overflow: auto;
-    background-color: #dfdf7d;
-    overflow: auto;
   }
 
   /* ******************SKILL PAGE************************** */
 
   .skill-page {
     box-sizing: border-box;
-    box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
     width: 90%;
-    height: auto;
-    display: none;
-    padding: 10px;
-    background-color: #84dc79;
-  }
-
-  .skill-page ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    padding: 20%;
   }
 
   .skill-page ul li {
-    color: black;
     margin: 10px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #da9760;
     box-shadow: 6px 6px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
-    box-sizing: border-box;
-    width: 70px;
-    height: 70px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
-  .skill-page ul li:hover {
-    cursor: pointer;
-  }
-
-  .skill-page img {
-    width: 35px;
-    height: auto;
   }
 
   /* ******************PROJECT PAGE************************** */
 
   .project-page {
-    box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
-    color: black;
-    display: none;
-    width: 75%;
-    height: auto;
     padding: 30px;
-    background-color: #8b9edd;
-  }
-
-  .project-page ul {
-    margin: 1px 30px;
   }
 
   .project-page ul li {
@@ -444,60 +437,11 @@ body {
 
   .contact-page {
     box-sizing: border-box;
-    box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
     width: 90%;
-    height: auto;
-    display: none;
-    padding: 10px;
-    background-color: #d86fd7;
-  }
-
-  .contact-page ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    padding: 20%;
   }
 
   .contact-page ul li {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
     margin: 10px;
-    padding: 20px;
-    background-color: #ddc68b;
-    box-shadow: 6px 6px 1px -1px rgb(0, 0, 0);
-    border: 1px solid black;
-    border-radius: 10px;
-    box-sizing: border-box;
-    width: 70px;
-    height: 70px;
     position: relative;
-  }
-
-  .contact-page ul li:hover {
-    cursor: pointer;
-  }
-
-  .contact-page img {
-    width: 35px;
-    height: auto;
-  }
-
-  .coba {
-    display: block;
-    text-align: center;
-    font-size: 1em;
-    position: absolute;
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: #2cf31200;
-    text-decoration: none;
   }
 }
