memperbaiki tampilan contact page yang tadinya berantakan

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 /************************************************/
-/*********************HEAD *********************/
+/*********************HEAD **********************/
 /************************************************/
 
 .navbar {
@@ -63,7 +63,7 @@ body {
 }
 
 /************************************************/
-/****************BODY******************/
+/**********************BODY**********************/
 /************************************************/
 
 .wrapper-content {
@@ -75,7 +75,7 @@ body {
   height: 85%;
 }
 
-/* ***************HOME PAGE**************** */
+/*******************HOME PAGE********************/
 
 .home-page {
   box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
@@ -105,7 +105,7 @@ body {
   width: auto;
 }
 
-/* ***********************ABOUT PAGE********************* */
+/************************ABOUT PAGE**********************/
 
 .about-page {
   box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
@@ -126,7 +126,6 @@ body {
   box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
   border: 1px solid black;
   border-radius: 10px;
-  width: 75%;
   height: auto;
   display: none;
   width: auto;
@@ -196,7 +195,7 @@ body {
   box-shadow: 10px 10px 1px -1px rgb(0, 0, 0);
   border: 1px solid black;
   border-radius: 10px;
-  width: 75%;
+  width: auto;
   height: auto;
   display: none;
   padding: 10px;
@@ -368,7 +367,7 @@ body {
   }
 
   /************************************************/
-  /*********************HEAD *********************/
+  /*********************HEAD **********************/
   /************************************************/
 
   .wrapper-navbar {
@@ -384,10 +383,10 @@ body {
   }
 
   /************************************************/
-  /****************BODY******************/
+  /**********************BODY**********************/
   /************************************************/
 
-  /* ***************HOME PAGE**************** */
+  /*******************HOME PAGE********************/
 
   .home-page {
     box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
@@ -402,7 +401,7 @@ body {
     display: none;
   }
 
-  /************************ABOUT PAGE*********************/
+  /*********************ABOUT PAGE*********************/
 
   .about-page {
     box-shadow: 8px 8px 1px -1px rgb(0, 0, 0);
@@ -411,7 +410,7 @@ body {
     padding: 30px;
   }
 
-  /* ******************SKILL PAGE************************** */
+  /*******************SKILL PAGE***********************/
 
   .skill-page {
     box-sizing: border-box;
